# claudio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  ci.yml  release.yml  update-homebrew.yml
Formula/: claudio.rb.cask.template  claudio.rb.template
claudio-ui/: Info.plist  Package.swift  build.sh  install.sh
claudio-ui/Sources/ClaudioUI/: ClaudioUIApp.swift  SpeechEngine.swift  TranscriptionView.swift
ideas/: learn-vocabulary-from-edits.md  visual-diff-for-edits.md
scripts/: fetch-vosk.sh
src/: inline_term.rs  main.rs  render.rs  speech.rs  ui.rs  widgets.rs  window.rs
src/speech/: linux.rs  macos.rs  mock.rs  mod.rs  windows.rs
